fix spacing issue in orders page

--- a/css/k12-lp-customer-support-1-1.css
+++ b/css/k12-lp-customer-support-1-1.css
@@ -1175,7 +1175,7 @@
   line-height: 28px;
   position: absolute;
   text-align: center;
-  top: 62px;
+  top: 35px;
   white-space: nowrap;
   width: 252px;
 }
@@ -2142,7 +2142,7 @@
   line-height: 28px;
   position: absolute;
   text-align: center;
-  top: 62px;
+  top: 35px;
   white-space: nowrap;
   width: 252px;
 }
